@startuml

title __LAB4's Class Diagram__\n


    namespace om.example.lab4 {
      class com.example.lab4.HelloApplication {
          {static} + main()
          + start()
      }
    }

  


    namespace om.example.lab4 {
      class com.example.lab4.HelloController {
          + i : int
          + imageView : ImageView
          + textField : TextField
          + timeline : Timeline
          + initialize()
          + onButton2()
          + onHelloButtonClick()
          + onPause()
          + onSetTime()
          + onStart()
          + onStop()
      }
    }

  

  com.example.lab4.HelloApplication -up-|> javafx.application.Application
  com.example.lab4.HelloController .up.|> javafx.fxml.Initializable
  com.example.lab4.HelloController o-- packege.ImageCollection : imgs
  com.example.lab4.HelloController o-- packege.Iterator : iter_main


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
